--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^22.5.1",
     "millify": "^6.1.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-quill": "^2.0.0",
